# azure-devops-mcp

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
examples/: codex.config.toml  codex.mcp.json
src/azure_devops_mcp/: ado_client.py  config.py  server.py
